# safe-interpreter

./: README.md  lolz.txt  safe-interpreter.cabal
src/: Execute.hs  Lexer.hs  Lexer.x_  Main.hs  Parser.hs  Parser.hs_  Parser.y  ReferencesCheck.hs  TH.hs  TypeMagic.hs
src/AST/: Basic.hs  StackSizeAnnotated.hs
