name:                safe-interpreter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/safe-interpreter#readme
license:             BSD3
license-file:        LICENSE
author:              Piotr Dulikowski
maintainer:          piodul@op.pl
copyright:           2017 Piotr Dulikowski
category:            Programming languages
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable safe-interpreter
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , array
                       , parsec
                       , mtl
                       , containers
                       , lens
                       , template-haskell
  other-modules:       AST.Basic
                       AST.StackSizeAnnotated
                       Execute
                       Lexer
                       Parser
                       TypeMagic
                       TH
                       ReferencesCheck
  ghc-options:         -Wall
